tests/mm0_mmu/fail/bad-sort41.mm0
-- free should be after pure
free pure sort s41;